# pr-agent

./: .env.example  Dockerfile  README.md  celery_run.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server_run.sh
app/: celery_conf.py  config.py  gh.py  main.py  prompt.py  schema.py  schemas.py  tasks.py
app/services/: analyzer.py  gh.py
assets/: systemd  webhook.json
scripts/: worker.sh
