[project]
name = "pr_agent"
version = "0.1.0"
description = "Autonomous code review agent system that uses AI to analyze GitHub pull requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4.0",
    "fastapi[standard]>=0.115.5",
    "python-dotenv>=1.0.1",
    "redis>=5.2.0",
]
